--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Helen Walpole
+logo: "/images/logo.png?raw=true" 
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Designing creative, meaningful experiences 
   <br><br>
-  Second description 
+  (Respectfully irreverent)
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/helenwalpole/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
